dismantle fwd.hpp for the most part
Having forward declarations of many types causes more problems than it solves.
It runs danger of IFNDR due to running SFINAE on incomplete types, and adds maintenance burden.
Many of the forward declarations are unnecessary, especially for small enumerations in their own header.

This PR also fixes some potential bugs in ast.hpp caused by forming std::span<T> where T is completed later.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,7 @@ set(COMMON_LIBRARY_SOURCES
 
     include/cowel/assets.hpp
     include/cowel/ast.hpp
+    include/cowel/ast_fwd.hpp
     include/cowel/builtin_directive_set.hpp
     include/cowel/call_stack.hpp
     include/cowel/content_status.hpp
