run file-based tests on node build in GitHub actions
This adds the necessary changes for the node build to enable integration testing, as is done in test_document_generation.cpp already.
The GitHub workflow for the node job now run these tests.

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -146,6 +146,9 @@ jobs:
         --verbose
 
     - name: Test
+      run: npm test
+
+    - name: Test CLI
       run: |
         node "${{ steps.strings.outputs.build_dir }}/npm/" run \
           docs/index.cow \
